--- a/kbp-events2014-scorer/pom.xml
+++ b/kbp-events2014-scorer/pom.xml
@@ -118,6 +118,14 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>
+            <version>2.0.19</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
 
