--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -2,14 +2,14 @@
     <parent>
         <artifactId>kbp-events2014-all</artifactId>
         <groupId>com.bbn.kbp.events2014</groupId>
-        <version>2.3.4-SNAPSHOT</version>
+        <version>2.3.4</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kbp-events2014-bin</artifactId>
-    <version>2.3.4-SNAPSHOT</version>
+    <version>2.3.4</version>
     <packaging>jar</packaging>
 
     <name>2014 KBP Event Arguments Task Binaries</name>
@@ -253,13 +253,13 @@
         <dependency>
             <groupId>com.bbn.kbp.events2014</groupId>
             <artifactId>kbp-events2014</artifactId>
-            <version>2.3.4-SNAPSHOT</version>
+            <version>2.3.4</version>
         </dependency>
 
         <dependency>
             <groupId>com.bbn.kbp.events2014</groupId>
             <artifactId>kbp-events2014-scorer</artifactId>
-            <version>2.3.4-SNAPSHOT</version>
+            <version>2.3.4</version>
         </dependency>
 
 
