Appassembler for importForeignIDs

--- a/kbp-events2014/pom.xml
+++ b/kbp-events2014/pom.xml
@@ -17,7 +17,19 @@
 
     <build>
         <plugins>
-
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>${appassembler.maven.plugin.version}</version>
+                <configuration>
+                    <programs>
+                        <program>
+                            <mainClass>com.bbn.kbp.events2014.io.ImportForeignIDs</mainClass>
+                            <name>importForeignIDs</name>
+                        </program>
+                    </programs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
