--- a/kbp-events2014-scorer/pom.xml
+++ b/kbp-events2014-scorer/pom.xml
@@ -39,6 +39,10 @@
                             </mainClass>
                             <name>KBP2015Scorer</name>
                         </program>
+                        <program>
+                            <mainClass>com.bbn.kbp.events.ScoreKBPAgainstERE</mainClass>
+                            <id>scoreKBPAgainstERE</id>
+                        </program>
 
 			<program>
 				<mainClass>com.bbn.kbp.events2014.scorer.bin.KBP2014ScorerBin</mainClass>
@@ -82,6 +86,11 @@
         <dependency>
             <groupId>com.bbn.bue</groupId>
             <artifactId>common-core-open</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.bbn.nlp</groupId>
+            <artifactId>nlp-core-open</artifactId>
         </dependency>
 
         <dependency>
