--- a/kbp-events2014-scorer/pom.xml
+++ b/kbp-events2014-scorer/pom.xml
@@ -140,7 +140,11 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
+        <dependency>
+            <groupId>com.bbn.nlp</groupId>
+            <artifactId>kbp-events2014-nlp</artifactId>
+            <version>2.4.6-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
