build the ERE document mapper

--- a/kbp-events2014/pom.xml
+++ b/kbp-events2014/pom.xml
@@ -27,6 +27,10 @@
                             <mainClass>com.bbn.kbp.events2014.io.ImportForeignIDs</mainClass>
                             <name>importForeignIDs</name>
                         </program>
+                        <program>
+                            <mainClass>com.bbn.nlp.corpora.ere.BuildRichEREDocIDToFileList</mainClass>
+                            <name>BuildRichEREDocIDToFileList</name>
+                        </program>
                     </programs>
                 </configuration>
             </plugin>
