--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <skipITs>true</skipITs>
 
         <junit.version>4.11</junit.version>
-        <bueopen.version>2.31.10</bueopen.version>
+        <bueopen.version>2.31.11-SNAPSHOT</bueopen.version>
 
         <!-- Sonar server properties. These only work BBN-internally -->
         <sonar.host.url>http://e-apache-2.bbn.com:9000</sonar.host.url>
@@ -222,6 +222,11 @@
             <dependency>
                 <groupId>com.bbn.bue</groupId>
                 <artifactId>common-core-jackson-serialization-open</artifactId>
+                <version>${bueopen.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.bbn.nlp</groupId>
+                <artifactId>nlp-core-open</artifactId>
                 <version>${bueopen.version}</version>
             </dependency>
         </dependencies>
