Rearrange Maven modules; remove some code irrelvant for 2016
Closes text-group/kbp#114

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <modules>
         <module>tac-kbp-eal</module>
         <module>tac-kbp-eal-scorer</module>
-        <module>tac-kbp-eal-bin</module>
+        <module>bue-common-awaiting-review</module>
     </modules>
 
     <properties>
