Test that corpus scorer works.
Closes text-group/kbp#138, text-group/kbp#149

--- a/tac-kbp-eal-scorer/pom.xml
+++ b/tac-kbp-eal-scorer/pom.xml
@@ -68,6 +68,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.bbn.bue</groupId>
+            <artifactId>scoring-open</artifactId>
+        </dependency>
+
+
+        <dependency>
             <groupId>com.bbn.nlp</groupId>
             <artifactId>nlp-core-open</artifactId>
         </dependency>
