--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,10 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                      <!-- Prevents an endPosTable exception during compilation
+                      when using code generation - this is a bug in Java, see
+                      https://bugs.openjdk.java.net/browse/JDK-8062800 -->
+                      <useIncrementalCompilation>false</useIncrementalCompilation>
                 </configuration>
             </plugin>
             <plugin>
@@ -231,6 +235,20 @@
                 <artifactId>common-core-jackson-serialization-open</artifactId>
                 <version>${bueopen.version}</version>
             </dependency>
+
+            <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>
+            <version>2.1.14</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>func</artifactId>
+            <version>2.1.14</version>
+        </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
