--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.bbn.kbp.eal</groupId>
     <artifactId>tac-kbp-eal-all</artifactId>
-    <version>3.2.1</version>
+    <version>3.2.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>TAC KBP Event Argument and Linking Shared Task</name>
