--- a/tac-kbp-eal/pom.xml
+++ b/tac-kbp-eal/pom.xml
@@ -118,6 +118,11 @@
                             </jvmSettings>
                         </program>
 
+                        <program>
+                            <mainClass>com.bbn.kbp.events2014.bin.ValidateSystemOutput2016</mainClass>
+                            <id>validateSystemOutput2016</id>
+                        </program>
+
 
                         <program>
                             <mainClass>com.bbn.kbp.events2014.bin.NISTValidator</mainClass>
