--- a/tac-kbp-eal/pom.xml
+++ b/tac-kbp-eal/pom.xml
@@ -2,14 +2,14 @@
     <parent>
         <artifactId>tac-kbp-eal-all</artifactId>
         <groupId>com.bbn.kbp.eal</groupId>
-        <version>3.2.2</version>
+        <version>3.2.3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tac-kbp-eal</artifactId>
-    <version>3.2.2</version>
+    <version>3.2.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Core code for KBP 2014 Event Arguments Task</name>
@@ -309,7 +309,7 @@
         <dependency>
             <groupId>com.bbn.kbp.eal</groupId>
             <artifactId>bue-common-awaiting-review</artifactId>
-            <version>3.2.2</version>
+            <version>3.2.3-SNAPSHOT</version>
         </dependency>
 
         <dependency>
