--- a/tac-kbp-eal/pom.xml
+++ b/tac-kbp-eal/pom.xml
@@ -233,6 +233,10 @@
                             <mainClass>com.bbn.kbp.events2014.bin.ExploreEALScorer</mainClass>
                             <id>exploreEalScorer</id>
                         </program>
+                        <program>
+                            <mainClass>com.bbn.kbp.events2014.QueryResponseFromERE</mainClass>
+                            <id>queryResponseFromERE</id>
+                        </program>
 
                     </programs>
                 </configuration>
