filter linking store and corpus event frames for linkable DocEventFrameReferences

--- a/tac-kbp-eal/pom.xml
+++ b/tac-kbp-eal/pom.xml
@@ -237,7 +237,11 @@
                             <mainClass>com.bbn.kbp.events2014.QueryResponseFromERE</mainClass>
                             <id>queryResponseFromERE</id>
                         </program>
-
+                        <program>
+                            <mainClass>com.bbn.kbp.events2014.bin.FilterLinkingStore
+                            </mainClass>
+                            <id>filterLinkingStore</id>
+                        </program>
                     </programs>
                 </configuration>
             </plugin>
