ScoreKBPAgainstERE: Allow plugins to observe scoring events

--- a/tac-kbp-eal-scorer/pom.xml
+++ b/tac-kbp-eal-scorer/pom.xml
@@ -130,6 +130,16 @@
             <version>2.1.14</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-multibindings</artifactId>
+            <version>4.0</version>
+        </dependency>
     </dependencies>
 
 
