--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 
         <junit.version>4.11</junit.version>
         <bueopen.version>4.14.2-SNAPSHOT</bueopen.version>
+        <jackson.version>2.7.5</jackson.version>
 
         <!-- Sonar server properties. These only work BBN-internally -->
         <sonar.host.url>http://e-apache-2.bbn.com:9000</sonar.host.url>
@@ -274,6 +275,17 @@
             <version>2.1.14</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
 
         </dependencies>
     </dependencyManagement>
