--- a/tac-kbp-eal-scorer/pom.xml
+++ b/tac-kbp-eal-scorer/pom.xml
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>com.bbn.kbp.eal</groupId>
             <artifactId>tac-kbp-eal</artifactId>
-            <version>3.4.6</version>
+            <version>3.4.7-SNAPSHOT</version>
         </dependency>
 
         <dependency>
