--- a/tac-kbp-eal-scorer/pom.xml
+++ b/tac-kbp-eal-scorer/pom.xml
@@ -141,6 +141,11 @@
         </dependency>
         <dependency>
             <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-assistedinject</artifactId>
+            <version>4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
             <artifactId>guice-multibindings</artifactId>
             <version>4.0</version>
         </dependency>
